--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
     "concurrently": "^8.2.0",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "typescript": "^5.1.3"
+    "pg": "^8.11.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@types/pg": "^8.10.2",
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
+    "typescript": "^5.1.3"
   }
 }
