--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node build/index.js",
-    "dev": "concurrently \"npx tsc -w\" \"nodemon build/index.js\""
+    "start": "node build/server.js",
+    "dev": "concurrently \"npx tsc -w\" \"nodemon build/server.js\""
   },
   "author": "Marko",
   "license": "ISC",
@@ -14,8 +14,11 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
     "concurrently": "^8.2.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0"
   },
   "devDependencies": {
