--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,6 @@
 {
-  "singleQuote": true
+  "singleQuote": true,
+  "trailingComma": "all",
+  "object-curly-newline": true,
+  "object-property-newline": true
 }
