--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "pg": "^8.11.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/pg": "^8.10.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "eslint": "^8.42.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "typescript": "^4.9.5"
