--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blogapi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "build": "npx tsc",
     "start": "node build/server.js",
@@ -27,6 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.42.0",
+    "eslint-plugin-react": "^7.32.2",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "typescript": "^4.9.5"
