--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST = db.jnlnicpjxuxyiupvmwyb.supabase.co
+DB_HOST = db.vkqosqdshujpxsmmqwrp.supabase.co
 DB_PORT = 5432
 DB_USER = postgres
 DB_PASSWORD = Supa_Base_3
