installed jest, config jest, created first test for newUser function

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "npx tsc",
     "start": "node build/server.js",
     "dev": "NODE_ENV=development concurrently \"npx tsc -w\" \"nodemon build/server.js\"",
-    "prod": "NODE_ENV=production concurrently \"npx tsc -w\" \"nodemon build/server.js\""
+    "prod": "NODE_ENV=production concurrently \"npx tsc -w\" \"nodemon build/server.js\"",
+    "test": "jest",
+    "test :watch": "jest --watch",
+    "test :coverage": "jest --coverage"
   },
   "author": "Marko",
   "license": "ISC",
@@ -23,20 +26,24 @@
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.32.0"
+    "sequelize": "^6.32.0",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
+    "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/pg": "^8.10.2",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.42.0",
     "eslint-plugin-react": "^7.32.2",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.9.5"
   }
 }
