--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ DB_HOST = db.vkqosqdshujpxsmmqwrp.supabase.co
 DB_PORT = 5432
 DB_USER = postgres
 DB_PASSWORD = Supa_Base_3
-DATABASE = postgres
+DB_DATABASE = postgres
 
 JWT_SECRET=blogblog
